@@ -35,6 +35,8 @@ NODE_RESERVED_NAMES_CONST <- c( 'AddChild',
                                 'position',
                                 'Prune',
                                 'Revert',
+                                'RemoveAttribute',
+                                'RemoveChild',
                                 'root',
                                 'Set',
                                 'Sort',
@@ -55,6 +57,8 @@ NODE_RESERVED_NAMES_CONST <- c( 'AddChild',
 #' \describe{
 #'   \item{\code{Node$new(name)}}{Creates a new \code{Node} called \code{name}. Often used to construct the root when creating trees programmatically.}
 #'   \item{\code{AddChild(name)}}{Creates a new \code{Node} called \code{name} and adds it to this \code{Node} as a child.}
+#'   \item{\code{RemoveChild(name)}}{Remove the child \code{Node} called \code{name} from a \code{Node} and returns it.}
+#'   \item{\code{RemoveAttribute(name)}}{Removes attribute called \code{name} from this \code{Node}.}
 #'   \item{\code{\link{Climb}(...)}}{Find a node with path \code{...}, where the \code{...} arguments are the \code{name}s of the \code{Node}s }
 #'   \item{\code{\link{Get}(attribute, ..., traversal = c("pre-order", "post-order", "in-order", "level", "ancestor"), pruneFun = NULL, filterFun = NULL, format = NULL, inheritFromAncestors = FALSE)}}{Traverses the tree and collects values along the way.}
 #'   \item{\code{\link{Do}(fun, ..., traversal = c("pre-order", "post-order", "in-order", "level", "ancestor"), pruneFun = NULL, filterFun = NUL)}}{Traverses the tree and call fun on each node.}
@@ -126,6 +130,21 @@ Node <- R6Class("Node",
                         self[[child$name]] <- child
                         child$parent <- self
                         invisible (child)
+                      },
+                      
+                      
+                      RemoveChild = function(name) {
+                        if (!name %in% names(self$children)) stop(paste0("Node ", self$name, " does not contain child ", name))
+                        child <- self$children[[name]]
+                        self$RemoveAttribute(name)
+                        self$children <- self$children[-child$position]
+                        child$parent <- NULL
+                        return (child)
+                      },
+                      
+                      RemoveAttribute = function(name) {
+                        if (!name %in% ls(self)) stop(paste0("Node ", self$name, " does not contain field ", name))
+                        rm(list = name, envir = self)
                       },
                       
                       
